--- a/score-keeper/assets/sass/main.css
+++ b/score-keeper/assets/sass/main.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+.winner {
+  background-color: red;
+  color: white;
+/*# sourceMappingURL=main.css.map */
