--- a/monster-slayer/assets/sass/main.css
+++ b/monster-slayer/assets/sass/main.css
@@ -1,4 +1,1 @@
-.winner {
-  background-color: red;
-  color: white;
-/*# sourceMappingURL=main.css.map */
+/* No CSS *//*# sourceMappingURL=main.css.map */
